feat : record and delete settlement
